--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Maahir Portofolio</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="tailwind.config.js">
 </head>
 <body>
-  <h1>Hello World</h1>
+  <div class="">
+    
+  </div>
 </body>
 </html>
