--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
   <title>Maahir Portofolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="tailwind.config.js">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-  <div class="">
-    
+  <div class="flex justify-between items-center w-full h-20 bg-gray-100 ">
+    <img src="images/logo.png" class="sm:w-52 w-40 sm:pl-4 pl-0" alt="">
+    <div class="sm:flex gap-10 sm:pr-8 items-center hidden">
+      <a href="#" class="text-md font-semibold text-gray-600 hover:text-gray-500 hover:font-normal">Home</a>
+      <a href="#" class="text-md font-semibold text-gray-600 hover:text-gray-500 hover:font-normal">Services</a>
+      <a href="#" class="text-md font-semibold text-gray-600 hover:text-gray-500 hover:font-normal">Skill</a>
+      <a href="#" class="text-md font-semibold text-gray-600 hover:text-gray-500 hover:font-normal">About Us</a>
+      <a href="#" class="text-md font-semibold text-gray-600 hover:text-gray-500 hover:font-normal">Contact Us</a>
+    </div>
+    <i class="fa-solid fa-bars text-3xl text-gray-800 pr-4 sm:hidden flex items-center"></i>
   </div>
 </body>
 </html>
